exports[`Storyshots Button API 1`] = `
<button
  className="hkjKTu"
  kind="primary">
  Simple button
</button>
`;

exports[`Storyshots Button Overriding style 1`] = `
<button
  className="WzsJi"
  kind="primary"
  onClick={[Function]}>
  Overriding style
</button>
`;

exports[`Storyshots Button With kind props 1`] = `
<div
  className="ekbxOp">
  <button
    className="gWKTnI"
    kind="default"
    onClick={[Function]}>
    default
  </button>
  <button
    className="hkjKTu"
    kind="primary"
    onClick={[Function]}>
    primary
  </button>
  <button
    className="kCvXCW"
    kind="success"
    onClick={[Function]}>
    success
  </button>
  <button
    className="hHCdSJ"
    kind="error"
    onClick={[Function]}>
    error
  </button>
  <button
    className="ePRgCQ"
    kind="warning"
    onClick={[Function]}>
    warning
  </button>
</div>
`;

exports[`Storyshots Button With theme provider (Material) 1`] = `
<div
  className="ekbxOp">
  <button
    className="fLAIJr"
    kind="default"
    onClick={[Function]}>
    default
  </button>
  <button
    className="jBPAeu"
    kind="primary"
    onClick={[Function]}>
    primary
  </button>
  <button
    className="ddoWjI"
    kind="success"
    onClick={[Function]}>
    success
  </button>
  <button
    className="gGdFcO"
    kind="error"
    onClick={[Function]}>
    error
  </button>
  <button
    className="hYHCGC"
    kind="warning"
    onClick={[Function]}>
    warning
  </button>
</div>
`;

exports[`Storyshots Card API 1`] = `
<div
  className="dVFvPA">
  Card Content
</div>
`;

exports[`Storyshots DataChannelCard API 1`] = `
<div
  className="jFlOlG">
  Content
</div>
`;

exports[`Storyshots Switch API 1`] = `
<div>
  <div
    checked={false}
    className="cICTqL" />
  <div
    checked={true}
    className="jvOKcu" />
</div>
`;

exports[`Storyshots Switch Overriding style 1`] = `
<div
  checked={false}
  className="hZJZFY"
  onClick={[Function]} />
`;

exports[`Storyshots Switch Stateful switch 1`] = `
<div
  checked={false}
  className="cICTqL"
  onClick={[Function]} />
`;
